--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio de Angel</title>
+  <title>Portafolio de Angel - Gaming Edition</title>
   <style>
     * {
       margin: 0;
@@ -14,50 +14,179 @@
     :root {
       --primary-color: #00ff88;
       --secondary-color: #00d4aa;
-      --dark-bg: #0f1419;
-      --card-bg: #1a1f26;
+      --dark-bg: #0a0e1a;
+      --card-bg: #151923;
       --text-primary: #ffffff;
       --text-secondary: #a0aec0;
+      --neon-cyan: #00ffff;
+      --neon-pink: #ff00ff;
+      --neon-yellow: #ffff00;
       --gradient-1: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --gradient-2: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
       --gradient-3: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
     }
 
+    @keyframes glitch {
+      0%, 100% { transform: translate(0); }
+      20% { transform: translate(-2px, 2px); }
+      40% { transform: translate(-2px, -2px); }
+      60% { transform: translate(2px, 2px); }
+      80% { transform: translate(2px, -2px); }
+    }
+
+    @keyframes neonPulse {
+      0%, 100% { 
+        text-shadow: 0 0 10px var(--primary-color),
+                     0 0 20px var(--primary-color),
+                     0 0 30px var(--primary-color);
+      }
+      50% { 
+        text-shadow: 0 0 20px var(--primary-color),
+                     0 0 30px var(--primary-color),
+                     0 0 40px var(--primary-color),
+                     0 0 50px var(--primary-color);
+      }
+    }
+
+    @keyframes scanline {
+      0% { transform: translateY(-100%); }
+      100% { transform: translateY(100vh); }
+    }
+
+    @keyframes pixelate {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.8; }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-20px); }
+    }
+
+    @keyframes floatRotate {
+      0%, 100% { transform: translateY(0px) rotate(0deg); }
+      50% { transform: translateY(-30px) rotate(180deg); }
+    }
+
+    @keyframes borderGlow {
+      0%, 100% { 
+        box-shadow: 0 0 5px var(--primary-color),
+                    inset 0 0 5px var(--primary-color);
+      }
+      50% { 
+        box-shadow: 0 0 20px var(--primary-color),
+                    inset 0 0 10px var(--primary-color);
+      }
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Courier New', monospace;
       background: var(--dark-bg);
       color: var(--text-primary);
       line-height: 1.6;
       overflow-x: hidden;
+      position: relative;
     }
 
-    /* Navegación moderna */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: 
+        repeating-linear-gradient(
+          0deg,
+          rgba(0, 255, 136, 0.03) 0px,
+          transparent 1px,
+          transparent 2px,
+          rgba(0, 255, 136, 0.03) 3px
+        );
+      pointer-events: none;
+      z-index: 1;
+      animation: scanline 8s linear infinite;
+    }
+
+    body::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(ellipse at center, transparent 0%, rgba(10, 14, 26, 0.4) 100%);
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    /* Navegación estilo HUD de videojuego */
     nav {
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(15, 20, 25, 0.95);
+      background: rgba(10, 14, 26, 0.98);
       backdrop-filter: blur(10px);
       padding: 1rem 5%;
       z-index: 1000;
-      border-bottom: 1px solid rgba(0, 255, 136, 0.1);
+      border-bottom: 3px solid var(--primary-color);
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.5),
+                  inset 0 -2px 10px rgba(0, 255, 136, 0.2);
+    }
+
+    nav::before {
+      content: '[ MENU ]';
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: var(--primary-color);
+      font-weight: bold;
+      font-size: 0.9rem;
+      letter-spacing: 2px;
+      animation: neonPulse 2s infinite;
+    }
+
+    nav::after {
+      content: '█';
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: var(--primary-color);
+      font-size: 1.2rem;
+      animation: pixelate 1s infinite;
     }
 
     nav ul {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: 0.5rem;
       list-style: none;
     }
 
     nav a {
       color: var(--text-secondary);
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 700;
       transition: all 0.3s ease;
       position: relative;
-      padding: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border: 2px solid transparent;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-size: 0.85rem;
+      background: rgba(0, 255, 136, 0.05);
+    }
+
+    nav a::before {
+      content: '>';
+      position: absolute;
+      left: 0;
+      opacity: 0;
+      transition: all 0.3s ease;
+      color: var(--primary-color);
     }
 
     nav a::after {
@@ -69,17 +198,27 @@
       height: 2px;
       background: var(--primary-color);
       transition: width 0.3s ease;
+      box-shadow: 0 0 10px var(--primary-color);
     }
 
     nav a:hover {
       color: var(--primary-color);
+      text-shadow: 0 0 10px var(--primary-color);
+      border-color: var(--primary-color);
+      padding-left: 1.5rem;
+      background: rgba(0, 255, 136, 0.1);
+    }
+
+    nav a:hover::before {
+      opacity: 1;
+      left: 5px;
     }
 
     nav a:hover::after {
       width: 100%;
     }
 
-    /* Hero Section mejorado */
+    /* Hero Section estilo videojuego */
     .hero {
       min-height: 100vh;
       display: flex;
@@ -88,6 +227,7 @@
       padding: 100px 5% 50px;
       position: relative;
       overflow: hidden;
+      z-index: 2;
     }
 
     .hero::before {
@@ -95,16 +235,23 @@
       position: absolute;
       width: 500px;
       height: 500px;
-      background: radial-gradient(circle, rgba(0,255,136,0.1) 0%, transparent 70%);
+      background: radial-gradient(circle, rgba(0,255,136,0.15) 0%, transparent 70%);
       border-radius: 50%;
       top: -250px;
       right: -250px;
-      animation: float 6s ease-in-out infinite;
+      animation: floatRotate 8s ease-in-out infinite;
     }
 
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-20px); }
+    .hero::after {
+      content: '';
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(255,0,255,0.1) 0%, transparent 70%);
+      border-radius: 50%;
+      bottom: -150px;
+      left: -150px;
+      animation: floatRotate 6s ease-in-out infinite reverse;
     }
 
     .hero-content {
@@ -114,16 +261,30 @@
       align-items: center;
       max-width: 1200px;
       width: 100%;
+      position: relative;
+      z-index: 3;
     }
 
     .text-section h1 {
       font-size: 3.5rem;
       font-weight: 700;
       margin-bottom: 1rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+      background: linear-gradient(135deg, var(--primary-color), var(--neon-cyan));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      animation: neonPulse 3s infinite;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    .text-section h1::before {
+      content: '[ PLAYER_01 ]';
+      display: block;
+      font-size: 0.8rem;
+      color: var(--primary-color);
+      margin-bottom: 0.5rem;
+      letter-spacing: 3px;
     }
 
     .text-section p {
@@ -131,48 +292,90 @@
       color: var(--text-secondary);
       margin-bottom: 2rem;
       line-height: 1.8;
+      border-left: 3px solid var(--primary-color);
+      padding-left: 1rem;
+      background: rgba(0, 255, 136, 0.05);
+      padding: 1rem;
     }
 
     #contactBtn {
       background: var(--primary-color);
       color: var(--dark-bg);
-      border: none;
+      border: 3px solid var(--primary-color);
       padding: 1rem 2.5rem;
       font-size: 1.1rem;
-      font-weight: 600;
-      border-radius: 50px;
+      font-weight: 700;
+      border-radius: 0;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 10px 30px rgba(0, 255, 136, 0.3);
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.5);
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #contactBtn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.2);
+      transition: left 0.3s ease;
+    }
+
+    #contactBtn:hover::before {
+      left: 100%;
     }
 
     #contactBtn:hover {
       transform: translateY(-3px);
-      box-shadow: 0 15px 40px rgba(0, 255, 136, 0.4);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.8),
+                  inset 0 0 20px rgba(0, 255, 136, 0.3);
+      animation: glitch 0.3s infinite;
     }
 
     .image-section {
       position: relative;
+      z-index: 3;
+    }
+
+    .image-section::before {
+      content: '';
+      position: absolute;
+      top: -20px;
+      left: -20px;
+      right: 20px;
+      bottom: 20px;
+      border: 3px solid var(--primary-color);
+      z-index: -1;
+      animation: borderGlow 2s infinite;
     }
 
     .image-section img {
       width: 100%;
       max-width: 400px;
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
       border: 3px solid var(--primary-color);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.5);
       transition: transform 0.3s ease;
+      filter: contrast(1.1) brightness(1.05);
     }
 
     .image-section img:hover {
       transform: scale(1.05);
+      box-shadow: 0 0 50px rgba(0, 255, 136, 0.8);
+      animation: glitch 0.3s;
     }
 
-    /* Secciones mejoradas */
+    /* Secciones estilo videojuego */
     section {
       padding: 80px 5%;
       max-width: 1400px;
       margin: 0 auto;
+      position: relative;
+      z-index: 2;
     }
 
     section h2 {
@@ -182,6 +385,17 @@
       position: relative;
       display: inline-block;
       width: 100%;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      color: var(--primary-color);
+      text-shadow: 0 0 20px var(--primary-color);
+    }
+
+    section h2::before {
+      content: '//';
+      position: absolute;
+      left: 0;
+      color: var(--neon-cyan);
     }
 
     section h2::after {
@@ -190,13 +404,13 @@
       bottom: -10px;
       left: 50%;
       transform: translateX(-50%);
-      width: 80px;
+      width: 100px;
       height: 4px;
       background: var(--primary-color);
-      border-radius: 2px;
+      box-shadow: 0 0 10px var(--primary-color);
     }
 
-    /* Cards modernos */
+    /* Cards estilo videojuego */
     .card-section {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -206,11 +420,11 @@
     .card {
       background: var(--card-bg);
       padding: 2rem;
-      border-radius: 15px;
+      border: 3px solid rgba(0, 255, 136, 0.3);
       transition: all 0.3s ease;
-      border: 1px solid rgba(255, 255, 255, 0.05);
       position: relative;
       overflow: hidden;
+      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
     }
 
     .card::before {
@@ -223,6 +437,16 @@
       background: var(--gradient-1);
     }
 
+    .card::after {
+      content: '█';
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      color: var(--primary-color);
+      opacity: 0.3;
+      font-size: 2rem;
+    }
+
     .card:nth-child(2)::before {
       background: var(--gradient-2);
     }
@@ -233,14 +457,23 @@
 
     .card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 20px 40px rgba(0, 255, 136, 0.2);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.5);
       border-color: var(--primary-color);
+      animation: borderGlow 1s infinite;
     }
 
     .card h3 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
       color: var(--primary-color);
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 0 0 10px var(--primary-color);
+    }
+
+    .card h3::before {
+      content: '> ';
+      color: var(--neon-cyan);
     }
 
     .card p {
@@ -248,7 +481,7 @@
       line-height: 1.8;
     }
 
-    /* Skills Grid mejorado */
+    /* Skills Grid estilo videojuego */
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -259,28 +492,54 @@
     .skill-card {
       background: var(--card-bg);
       padding: 2rem;
-      border-radius: 15px;
       text-align: center;
       transition: all 0.3s ease;
-      border: 1px solid rgba(255, 255, 255, 0.05);
+      border: 3px solid rgba(0, 255, 136, 0.3);
+      position: relative;
+      clip-path: polygon(10% 0, 100% 0, 100% 90%, 90% 100%, 0 100%, 0 10%);
+    }
+
+    .skill-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at center, rgba(0, 255, 136, 0.1) 0%, transparent 70%);
+      opacity: 0;
+      transition: opacity 0.3s ease;
     }
 
     .skill-card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 20px 40px rgba(0, 255, 136, 0.2);
+      transform: translateY(-10px) scale(1.05);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.5);
       border-color: var(--primary-color);
+    }
+
+    .skill-card:hover::before {
+      opacity: 1;
     }
 
     .skill-icon {
       width: 80px;
       height: 80px;
       margin-bottom: 1rem;
-      filter: drop-shadow(0 5px 15px rgba(0, 255, 136, 0.3));
+      filter: drop-shadow(0 5px 15px rgba(0, 255, 136, 0.5));
+      transition: all 0.3s ease;
+    }
+
+    .skill-card:hover .skill-icon {
+      transform: rotateY(360deg);
+      filter: drop-shadow(0 10px 30px rgba(0, 255, 136, 0.8));
     }
 
     .skill-card h3 {
       color: var(--primary-color);
       margin-bottom: 0.5rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      text-shadow: 0 0 10px var(--primary-color);
     }
 
     .skill-card p {
@@ -299,27 +558,55 @@
     .cert-card {
       background: var(--card-bg);
       padding: 2rem;
-      border-radius: 15px;
-      border-left: 4px solid var(--primary-color);
+      border-left: 5px solid var(--primary-color);
+      border-top: 1px solid rgba(0, 255, 136, 0.3);
       transition: all 0.3s ease;
+      position: relative;
+    }
+
+    .cert-card::before {
+      content: '✓';
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: var(--primary-color);
+      font-size: 2rem;
+      opacity: 0.2;
     }
 
     .cert-card:hover {
       transform: translateX(10px);
-      box-shadow: 0 10px 30px rgba(0, 255, 136, 0.2);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.3);
+      border-left-width: 10px;
     }
 
     .cert-card h3 {
       color: var(--primary-color);
       margin-bottom: 1rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     /* Sección de contacto */
     .contact-section {
       background: var(--card-bg);
-      border-radius: 20px;
       padding: 3rem;
       margin-top: 2rem;
+      border: 3px solid var(--primary-color);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.3);
+      position: relative;
+    }
+
+    .contact-section::before {
+      content: '[ CONTACT FORM ]';
+      position: absolute;
+      top: -15px;
+      left: 20px;
+      background: var(--dark-bg);
+      padding: 0 10px;
+      color: var(--primary-color);
+      font-weight: bold;
+      letter-spacing: 2px;
     }
 
     .contact-section.hidden {
@@ -337,19 +624,20 @@
     #contactForm input,
     #contactForm textarea {
       padding: 1rem;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      background: rgba(255, 255, 255, 0.05);
+      border: 2px solid rgba(0, 255, 136, 0.3);
+      background: rgba(0, 0, 0, 0.5);
       color: var(--text-primary);
-      border-radius: 10px;
       font-size: 1rem;
       transition: all 0.3s ease;
+      font-family: 'Courier New', monospace;
     }
 
     #contactForm input:focus,
     #contactForm textarea:focus {
       outline: none;
       border-color: var(--primary-color);
-      box-shadow: 0 0 20px rgba(0, 255, 136, 0.2);
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.5);
+      background: rgba(0, 255, 136, 0.05);
     }
 
     #contactForm textarea {
@@ -360,25 +648,30 @@
     #contactForm button {
       background: var(--primary-color);
       color: var(--dark-bg);
-      border: none;
+      border: 3px solid var(--primary-color);
       padding: 1rem 2rem;
       font-size: 1.1rem;
-      font-weight: 600;
-      border-radius: 50px;
+      font-weight: 700;
       cursor: pointer;
       transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-family: 'Courier New', monospace;
     }
 
     #contactForm button:hover {
       transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(0, 255, 136, 0.3);
+      box-shadow: 0 0 30px rgba(0, 255, 136, 0.8);
+      animation: glitch 0.3s;
     }
 
     #formResponse {
       text-align: center;
       color: var(--primary-color);
       margin-top: 1rem;
-      font-weight: 600;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
     /* Footer */
@@ -386,12 +679,26 @@
       background: var(--card-bg);
       padding: 2rem 5%;
       text-align: center;
-      border-top: 1px solid rgba(0, 255, 136, 0.1);
+      border-top: 3px solid var(--primary-color);
       margin-top: 3rem;
+      box-shadow: 0 -5px 20px rgba(0, 255, 136, 0.3);
+      position: relative;
+      z-index: 2;
+    }
+
+    footer::before {
+      content: '[ END OF FILE ]';
+      display: block;
+      color: var(--primary-color);
+      font-size: 0.8rem;
+      margin-bottom: 1rem;
+      letter-spacing: 2px;
     }
 
     footer p {
       color: var(--text-secondary);
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     /* Links de redes sociales */
@@ -399,11 +706,12 @@
       color: var(--primary-color);
       text-decoration: none;
       transition: all 0.3s ease;
+      text-shadow: 0 0 5px var(--primary-color);
     }
 
     #social a:hover {
-      color: var(--secondary-color);
-      text-decoration: underline;
+      color: var(--neon-cyan);
+      text-shadow: 0 0 15px var(--neon-cyan);
     }
 
     /* Responsive */
@@ -422,7 +730,11 @@
       }
 
       nav ul {
-        gap: 1rem;
+        gap: 0.5rem;
+      }
+
+      nav::before {
+        display: none;
       }
 
       section h2 {
@@ -442,6 +754,11 @@
 
       .hero {
         padding: 80px 5% 30px;
+      }
+
+      nav a {
+        font-size: 0.75rem;
+        padding: 0.4rem 0.8rem;
       }
     }
   </style>
