--- a/jmakit.html
+++ b/jmakit.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JMAKIT – Sistema institucional</title>
-  <link rel="stylesheet" href="static/css/style.css" />
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
+<header class="hero">
+  <div class="hero-content">
+    <img src="static/img/logo nuevo.png" alt="Logo JMAKIT" class="logo">
+    <h1>JMAKIT</h1><img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Animación JMAKIT" class="animated-banner">
+    <p>Sistema institucional para clasificar y administrar productos con claridad y eficiencia.</p>
+  </div>
+</header>
+<section class="card-section">
+  <h2>Demostración del sistema</h2>
+  <div class="card">
+    <video controls width="100%">
+      <source src="static/img/JMAKIT PRO OFICIAL video.mp4" type="video/mp4">
+      Tu navegador no soporta video HTML5.
+    </video>
+    <p>Visualiza cómo JMAKIT organiza productos y genera reportes institucionales.</p>
+  </div>
+</section>
+
+<section class="card-section">
+  <h2>Identidad visual</h2>
+  <div class="card">
+    <h3>Logo sobre fondo blanco</h3>
+    <img src="static/img/JMAKIT PRO OFICIAL - FONDO BLANCO.png" alt="Logo fondo blanco" class="logo-sample">
+  </div>
+  <div class="card">
+    <h3>Logo con fondo transparente</h3>
+    <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Logo fondo transparente" class="logo-sample">
+  </div>
+</section>
 
 <body>
-  <!-- NAVEGACIÓN -->
+  <!-- Menú consistente -->
   <nav>
     <ul>
       <li><a href="index.html#inicio">Inicio</a></li>
@@ -20,52 +49,29 @@
     </ul>
   </nav>
 
-  <!-- HERO -->
+  <!-- Hero JMAKIT -->
   <header class="hero">
     <div class="hero-content">
-      <img src="static/img/logo nuevo.png" alt="Logo JMAKIT" class="logo" />
-      <h1>JMAKIT</h1>
-      <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Animación JMAKIT" class="animated-banner" />
-      <p>Sistema institucional para clasificar y administrar productos con claridad y eficiencia.</p>
+      <div class="text-section">
+        <h1>JMAKIT</h1>
+        <p>Sistema institucional para clasificar y administrar productos y recursos con claridad, eficiencia y utilidad práctica.</p>
+        <a class="btn" href="#caracteristicas">Ver características</a>
+      </div>
+      <div class="image-section">
+        <img src="static/img/jmakit-hero.png" alt="JMAKIT interfaz principal">
+      </div>
     </div>
   </header>
 
-  <!-- DEMOSTRACIÓN -->
-  <section class="card-section">
-    <h2>Demostración del sistema</h2>
-    <div class="card">
-      <video controls width="100%">
-        <source src="static/img/JMAKIT PRO OFICIAL video.mp4" type="video/mp4" />
-        Tu navegador no soporta video HTML5.
-      </video>
-      <p>Visualiza cómo JMAKIT organiza productos y genera reportes institucionales.</p>
-    </div>
-  </section>
-
-  <!-- IDENTIDAD VISUAL -->
-  <section class="card-section">
-    <h2>Identidad visual</h2>
-    <div class="card">
-      <h3>Logo sobre fondo blanco</h3>
-      <img src="static/img/JMAKIT PRO OFICIAL - FONDO BLANCO.png" alt="Logo fondo blanco" class="logo-sample" />
-    </div>
-    <div class="card">
-      <h3>Logo con fondo transparente</h3>
-      <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Logo fondo transparente" class="logo-sample" />
-    </div>
-  </section>
-
-  <!-- DESCRIPCIÓN GENERAL -->
+  <!-- Descripción general -->
   <section class="card-section">
     <h2>Descripción general</h2>
     <div class="card">
-      <p>
-        JMAKIT organiza datos institucionales en categorías (salud, abarrotes y técnicos), integra flujos con POS y genera material listo para exposición. Prioriza datos claros, completos y contextualizados para uso académico y administrativo.
-      </p>
+      <p>JMAKIT organiza datos institucionales en categorías (salud, abarrotes y técnicos), integra flujos con POS y genera material listo para exposición. Prioriza datos claros, completos y contextualizados para uso académico y administrativo.</p>
     </div>
   </section>
 
-  <!-- OBJETIVOS -->
+  <!-- Objetivos -->
   <section class="card-section">
     <h2>Objetivos</h2>
     <div class="card">
@@ -78,7 +84,7 @@
     </div>
   </section>
 
-  <!-- CARACTERÍSTICAS -->
+  <!-- Características -->
   <section id="caracteristicas" class="card-section">
     <h2>Características principales</h2>
     <div class="card">
@@ -92,7 +98,7 @@
     </div>
   </section>
 
-  <!-- MÓDULOS -->
+  <!-- Módulos -->
   <section class="card-section">
     <h2>Módulos del sistema</h2>
     <div class="card">
@@ -105,11 +111,11 @@
     </div>
   </section>
 
-  <!-- FLUJO DE TRABAJO -->
+  <!-- Flujo de trabajo -->
   <section class="card-section">
     <h2>Flujo de trabajo</h2>
     <div class="card">
-      <img src="static/img/jmakit-flujo.png" alt="Flujo de trabajo JMAKIT" />
+      <img src="static/img/jmakit-flujo.png" alt="Flujo de trabajo JMAKIT" style="width:100%;border-radius:8px;">
       <ol>
         <li><strong>Levantamiento:</strong> Recolección de datos reales por área.</li>
         <li><strong>Normalización:</strong> Limpieza, nombres, unidades y categorías.</li>
@@ -120,7 +126,7 @@
     </div>
   </section>
 
-  <!-- ACTIVIDADES -->
+  <!-- Actividades desarrolladas -->
   <section class="card-section">
     <h2>Actividades desarrolladas</h2>
     <div class="card">
@@ -133,17 +139,15 @@
     </div>
   </section>
 
-  <!-- RESULTADOS -->
+  <!-- Resultados e impacto -->
   <section class="card-section">
     <h2>Resultados e impacto</h2>
     <div class="card">
-      <p>
-        JMAKIT mejora la gestión diaria, reduce errores de inventario y acelera la preparación de presentaciones y reportes. Aumenta la confianza del equipo al trabajar con datos claros y procesos definidos.
-      </p>
+      <p>JMAKIT mejora la gestión diaria, reduce errores de inventario y acelera la preparación de presentaciones y reportes. Aumenta la confianza del equipo al trabajar con datos claros y procesos definidos.</p>
     </div>
   </section>
 
-  <!-- PRÓXIMOS PASOS -->
+  <!-- Próximos pasos -->
   <section class="card-section">
     <h2>Próximos pasos</h2>
     <div class="card">
@@ -165,7 +169,6 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Angel Hipólito López Quispe — JMAKIT</p>
   </footer>
