--- a/jmakit.html
+++ b/jmakit.html
@@ -1,43 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JMAKIT – Sistema institucional</title>
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css" />
 </head>
-<header class="hero">
-  <div class="hero-content">
-    <img src="static/img/logo nuevo.png" alt="Logo JMAKIT" class="logo">
-    <h1>JMAKIT</h1><img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Animación JMAKIT" class="animated-banner">
-    <p>Sistema institucional para clasificar y administrar productos con claridad y eficiencia.</p>
-  </div>
-</header>
-<section class="card-section">
-  <h2>Demostración del sistema</h2>
-  <div class="card">
-    <video controls width="100%">
-      <source src="static/img/JMAKIT PRO OFICIAL video.mp4" type="video/mp4">
-      Tu navegador no soporta video HTML5.
-    </video>
-    <p>Visualiza cómo JMAKIT organiza productos y genera reportes institucionales.</p>
-  </div>
-</section>
-
-<section class="card-section">
-  <h2>Identidad visual</h2>
-  <div class="card">
-    <h3>Logo sobre fondo blanco</h3>
-    <img src="static/img/JMAKIT PRO OFICIAL - FONDO BLANCO.png" alt="Logo fondo blanco" class="logo-sample">
-  </div>
-  <div class="card">
-    <h3>Logo con fondo transparente</h3>
-    <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Logo fondo transparente" class="logo-sample">
-  </div>
-</section>
 
 <body>
-  <!-- Menú consistente -->
+  <!-- NAVEGACIÓN -->
   <nav>
     <ul>
       <li><a href="index.html#inicio">Inicio</a></li>
@@ -49,29 +20,52 @@
     </ul>
   </nav>
 
-  <!-- Hero JMAKIT -->
+  <!-- HERO -->
   <header class="hero">
     <div class="hero-content">
-      <div class="text-section">
-        <h1>JMAKIT</h1>
-        <p>Sistema institucional para clasificar y administrar productos y recursos con claridad, eficiencia y utilidad práctica.</p>
-        <a class="btn" href="#caracteristicas">Ver características</a>
-      </div>
-      <div class="image-section">
-        <img src="static/img/jmakit-hero.png" alt="JMAKIT interfaz principal">
-      </div>
+      <img src="static/img/logo nuevo.png" alt="Logo JMAKIT" class="logo" />
+      <h1>JMAKIT</h1>
+      <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Animación JMAKIT" class="animated-banner" />
+      <p>Sistema institucional para clasificar y administrar productos con claridad y eficiencia.</p>
     </div>
   </header>
 
-  <!-- Descripción general -->
+  <!-- DEMOSTRACIÓN -->
   <section class="card-section">
-    <h2>Descripción general</h2>
+    <h2>Demostración del sistema</h2>
     <div class="card">
-      <p>JMAKIT organiza datos institucionales en categorías (salud, abarrotes y técnicos), integra flujos con POS y genera material listo para exposición. Prioriza datos claros, completos y contextualizados para uso académico y administrativo.</p>
+      <video controls width="100%">
+        <source src="static/img/JMAKIT PRO OFICIAL video.mp4" type="video/mp4" />
+        Tu navegador no soporta video HTML5.
+      </video>
+      <p>Visualiza cómo JMAKIT organiza productos y genera reportes institucionales.</p>
     </div>
   </section>
 
-  <!-- Objetivos -->
+  <!-- IDENTIDAD VISUAL -->
+  <section class="card-section">
+    <h2>Identidad visual</h2>
+    <div class="card">
+      <h3>Logo sobre fondo blanco</h3>
+      <img src="static/img/JMAKIT PRO OFICIAL - FONDO BLANCO.png" alt="Logo fondo blanco" class="logo-sample" />
+    </div>
+    <div class="card">
+      <h3>Logo con fondo transparente</h3>
+      <img src="static/img/JMAKIT PRO OFICIAL - FONDO TRANSPARENTE.png" alt="Logo fondo transparente" class="logo-sample" />
+    </div>
+  </section>
+
+  <!-- DESCRIPCIÓN GENERAL -->
+  <section class="card-section">
+    <h2>Descripción general</h2>
+    <div class="card">
+      <p>
+        JMAKIT organiza datos institucionales en categorías (salud, abarrotes y técnicos), integra flujos con POS y genera material listo para exposición. Prioriza datos claros, completos y contextualizados para uso académico y administrativo.
+      </p>
+    </div>
+  </section>
+
+  <!-- OBJETIVOS -->
   <section class="card-section">
     <h2>Objetivos</h2>
     <div class="card">
@@ -84,7 +78,7 @@
     </div>
   </section>
 
-  <!-- Características -->
+  <!-- CARACTERÍSTICAS -->
   <section id="caracteristicas" class="card-section">
     <h2>Características principales</h2>
     <div class="card">
@@ -98,7 +92,7 @@
     </div>
   </section>
 
-  <!-- Módulos -->
+  <!-- MÓDULOS -->
   <section class="card-section">
     <h2>Módulos del sistema</h2>
     <div class="card">
@@ -111,11 +105,11 @@
     </div>
   </section>
 
-  <!-- Flujo de trabajo -->
+  <!-- FLUJO DE TRABAJO -->
   <section class="card-section">
     <h2>Flujo de trabajo</h2>
     <div class="card">
-      <img src="static/img/jmakit-flujo.png" alt="Flujo de trabajo JMAKIT" style="width:100%;border-radius:8px;">
+      <img src="static/img/jmakit-flujo.png" alt="Flujo de trabajo JMAKIT" />
       <ol>
         <li><strong>Levantamiento:</strong> Recolección de datos reales por área.</li>
         <li><strong>Normalización:</strong> Limpieza, nombres, unidades y categorías.</li>
@@ -126,7 +120,7 @@
     </div>
   </section>
 
-  <!-- Actividades desarrolladas -->
+  <!-- ACTIVIDADES -->
   <section class="card-section">
     <h2>Actividades desarrolladas</h2>
     <div class="card">
@@ -139,15 +133,17 @@
     </div>
   </section>
 
-  <!-- Resultados e impacto -->
+  <!-- RESULTADOS -->
   <section class="card-section">
     <h2>Resultados e impacto</h2>
     <div class="card">
-      <p>JMAKIT mejora la gestión diaria, reduce errores de inventario y acelera la preparación de presentaciones y reportes. Aumenta la confianza del equipo al trabajar con datos claros y procesos definidos.</p>
+      <p>
+        JMAKIT mejora la gestión diaria, reduce errores de inventario y acelera la preparación de presentaciones y reportes. Aumenta la confianza del equipo al trabajar con datos claros y procesos definidos.
+      </p>
     </div>
   </section>
 
-  <!-- Próximos pasos -->
+  <!-- PRÓXIMOS PASOS -->
   <section class="card-section">
     <h2>Próximos pasos</h2>
     <div class="card">
@@ -169,6 +165,7 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Angel Hipólito López Quispe — JMAKIT</p>
   </footer>
