--- a/index.html
+++ b/index.html
@@ -959,16 +959,35 @@
   </section>
 
   <!-- Redes sociales -->
-  <section id="social">
-    <h2>Encuéntrame en Redes</h2>
-    <div class="card-section">
-      <div class="card">
-        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/angelhipolito" target="_blank">linkedin.com/in/angelhipolito</a></p>
-        <p>💻 GitHub: <a href="https://github.com/strikeangl" target="_blank">github.com/angelhipolito</a></p>
-        <p>📧 Correo: angellopez123at@gmaill.com</p>
-      </div>
+<section id="social">
+  <h2>Encuéntrame en Redes</h2>
+  <div class="card-section">
+    <div class="card">
+      <p>🔗 LinkedIn: 
+        <a href="https://linkedin.com/in/angelhipolito" target="_blank">
+          linkedin.com/in/angelhipolito
+        </a>
+      </p>
+      <p>💻 GitHub: 
+        <a href="https://github.com/strikeangl" target="_blank">
+          github.com/strikeangl
+        </a>
+      </p>
+      <p>📧 Correo: angellopez123at@gmail.com</p>
+      <p>📘 Facebook: 
+        <a href="https://facebook.com/angelhipolito" target="_blank">
+          facebook.com/angelhipolito
+        </a>
+      </p>
+      <p>🎵 TikTok: 
+        <a href="https://www.tiktok.com/@angelhipolito" target="_blank">
+          @angelhipolito
+        </a>
+      </p>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Contacto -->
   <section id="contact" class="contact-section hidden">
