--- a/index.html
+++ b/index.html
@@ -975,13 +975,13 @@
       </p>
       <p>📧 Correo: angellopez123at@gmail.com</p>
       <p>📘 Facebook: 
-        <a href="https://facebook.com/angelhipolito" target="_blank">
-          facebook.com/angelhipolito
+        <a href="https://web.facebook.com/angel.323759" target="_blank">
+          facebook.com/angel.323759
         </a>
       </p>
       <p>🎵 TikTok: 
-        <a href="https://www.tiktok.com/@angelhipolito" target="_blank">
-          @angelhipolito
+        <a href="https://www.tiktok.com/@strike_223" target="_blank">
+          @strike_223
         </a>
       </p>
     </div>
