--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
         <button id="contactBtn">Contáctame</button>
       </div>
       <div class="image-section">
-        <img src="static/img/angel.png" alt="Foto de Angel Hipólito">
+        <img src="static/img/angel.png" alt="Foto de Angel Hipólito" width="200" height="200">
       </div>
     </div>
   </header>
