--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
   <header class="hero">
     <div class="hero-content">
       <div class="text-section">
-        <h1>Hola 👋, soy Angel Hipólito</h1>
+        <h1>Hola 👋, soy Angel </h1>
         <p>Diseñador técnico, social y visual. Apasionado por crear soluciones útiles para mi institución.</p>
         <button id="contactBtn">Contáctame</button>
       </div>
