--- a/index.html
+++ b/index.html
@@ -1449,5 +1449,26 @@
       setTimeout(animateStats, 2000);
     });
   </script>
+  <!-- Sección de Servicios -->
+  <section id="services">
+    <h2>Servicios</h2>
+    <div class="card-section">
+      <div class="card">
+        <div class="card-icon">🌐</div>
+        <h3>Diseño Web</h3>
+        <p>Creación de páginas modernas y responsivas con HTML, CSS y JS.</p>
+      </div>
+      <div class="card">
+        <div class="card-icon">💳</div>
+        <h3>Sistemas POS</h3>
+        <p>Adaptación de sistemas administrativos para instituciones.</p>
+      </div>
+      <div class="card">
+        <div class="card-icon">📊</div>
+        <h3>Organización de Datos</h3>
+        <p>Clasificación clara y práctica de productos y recursos.</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
